--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ video {
 .met-panel {
   padding: 5px;
   background-color: black;
-  opacity: 40%;
+  opacity: 10%;
+  border-radius: 8px;
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -33,14 +34,17 @@ video {
   z-index: 9999;
 }
 .met-panel .met-collapse {
-  visibility: hidden;
-  display: flex;
+  display: none;
   flex-direction: column;
   gap: 4px;
 }
 .met-panel .met-toggles, .met-panel .met-playback {
   display: flex;
   gap: 4px;
+}
+.met-panel .met-toggles .met-btn--on, .met-panel .met-playback .met-btn--on {
+  color: white;
+  background-color: rgb(49, 55, 228);
 }
 .met-panel .met-toggles button, .met-panel .met-playback button {
   cursor: pointer;
@@ -59,10 +63,13 @@ video {
   font-size: 16px;
 }
 .met-panel .met-toggles button:hover, .met-panel .met-playback button:hover {
-  background-color: #ccc;
+  opacity: 80%;
+}
+.met-panel:hover {
+  opacity: 60%;
 }
 .met-panel:hover .met-collapse {
-  visibility: visible;
+  display: flex;
 }
 .met-panel:hover + video {
   pointer-events: none;
