--- a/met-inject.scss
+++ b/met-inject.scss
@@ -1,62 +1,126 @@
+$theme-colour: rgb(49, 55, 228);
+
 .met {
     position: relative;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.met-playback-indicator {
-    color: white;
-}
-
 .met-panel {
-    padding: 5px;
-    background-color: #111;
-    opacity: 10%;
-    border-radius: 8px;
     position: absolute;
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
     top: 10px;
     left: 10px;
+    padding: 5px;
+    background-color: #111;
+    opacity: 20%;
+    border-radius: 8px;
     // To allow for :hover
     z-index: 9999;
-    .met-collapse {
-        display: none;
-        flex-direction: column;
-        gap: 4px;
+    span:hover {
+        opacity: 70%;
     }
-
-    .met-toggles, .met-playback {
-        display: flex;
-        gap: 4px;
-        .met-btn--on {
-            color: white;
-            background-color: rgb(49, 55, 228);
-        }
-        button {
-            cursor: pointer;
-            display: block;
-            border: none;
-            border-radius: 6px;
-            margin: 0;
-            padding: 0 4px;
-            min-width: fit-content;
-            height: 24px;
-            width: 24px;
-            text-align: center;
-            line-height: 16px;
-            font-size: 16px;
-            &:hover {
-                opacity: 80%;
-            }
+    button {
+        cursor: pointer;
+        border: none;
+        border-radius: 4px;
+        &:hover {
+            opacity: 70%;
         }
     }
-    
-    &:hover {
-        opacity: 80%;
+    .met-btn--on {
+        color: white;
+        background-color: $theme-colour;
+    }
+    &:hover, .met-panel--expanded {
+        opacity: 70%;
+        .met-dropdown {
+            display: none;
+        }
         .met-collapse {
-            display: flex;
+            display: grid;
         }
     }
 }
+
+.met-collapse {
+    display: none;
+    grid-template-columns: repeat(5, 24px);
+    grid-template-rows: repeat(3, 20px);
+    text-align: center;
+    gap: 4px;
+}
+
+.met-playback-indicator {
+    grid-column: span 2;
+}
+
+// .met-panel {
+//     padding: 5px;
+//     background-color: #111;
+//     opacity: 10%;
+//     border-radius: 8px;
+//     position: absolute;
+//     display: flex;
+//     flex-direction: column;
+//     gap: 4px;
+//     top: 10px;
+//     left: 10px;
+//     // To allow for :hover
+//     z-index: 9999;
+//     .met-head {
+//         display: flex;
+//         width: 100%;
+//         justify-content: space-between;
+//         .met-head-collapse {
+//             display: none;
+//             width: 100%;
+//             justify-content: space-between;
+//         }
+//         // align-items: flex-start;
+//         // span:last-child {
+//             // align-self: ;
+//         // }
+//     }
+//     .met-collapse {
+//         display: none;
+//         flex-direction: column;
+//         gap: 4px;
+//     }
+
+//     button {
+//         cursor: pointer;
+//         display: block;
+//         border: none;
+//         border-radius: 6px;
+//         margin: 0;
+//         padding: 0 4px;
+//         min-width: fit-content;
+//         height: 24px;
+//         width: 24px;
+//         text-align: center;
+//         line-height: 16px;
+//         font-size: 16px;
+//         &:hover {
+//             opacity: 80%;
+//         }
+//     }
+
+//     .met-toggles, .met-playback {
+//         display: flex;
+//         gap: 4px;
+//         .met-btn--on {
+//             color: white;
+//             background-color: rgb(49, 55, 228);
+//         }
+//     }
+    
+//     &:hover {
+//         opacity: 80%;
+//         .met-collapse {
+//             display: flex;
+//         }
+//         .met-icon {
+//             display: none;
+//         }
+//     }
+// }
